// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`figureImage.js renders component 1`] = `
<figure
  className="sc-bdVaJa gfmnKv"
>
  <img
    alt="An image."
    src="https://via.placeholder.com/400x225"
  />
  
</figure>
`;

exports[`figureImage.js renders component 2`] = `
<figure
  className="sc-bdVaJa cJmbvo"
>
  <img
    alt="An image."
    src="https://via.placeholder.com/400x225"
  />
  <figcaption
    className="sc-bwzfXH kmIjOW"
  >
    A witty anecdote concerning the crocodile in the image above.
  </figcaption>
</figure>
`;

exports[`figureImage.js renders component 3`] = `
Array [
  <figure
    className="sc-bdVaJa eoVPHM"
  >
    <img
      alt="An image."
      src="https://via.placeholder.com/400x225"
    />
    
  </figure>,
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>,
]
`;

exports[`figureImage.js renders component 4`] = `ShallowWrapper {}`;
